# rdbms-project

./: .gitignore  README.md  pyproject.toml
rdbms/: formatter.py  repl.py
rdbms/executor/: evaluator.py  executor.py  planner.py
rdbms/parser/: ast.py  grammar.lark  parser.py
rdbms/storage/: database.py  index.py  table.py  types.py
rdbms/utils/: exceptions.py  row_utils.py  validators.py
tests/: test_executor.py  test_integration.py  test_parser.py  test_storage.py  test_utils.py
webapp/: app.py
webapp/static/: app.js  style.css
webapp/templates/: index.html
