[tool.poetry]
name = "simple-rdbms"
version = "0.1.0"
description = "A simple relational database management system with SQL interface"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.9"        # SQL parsing
flask = "^3.0.0"       # Web framework
tabulate = "^0.9.0"    # Pretty table printing in REPL

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"      # Testing
pytest-cov = "^4.1.0"  # Test coverage

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
